--- a/prepros.config
+++ b/prepros.config
@@ -912,13 +912,6 @@
         }
       }
     },
-    "files": [
-      {
-        "file": "css/main.css",
-        "config": {
-          "autoCompile": true
-        }
-      }
-    ]
+    "files": []
   }
 }
